# kist-py

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codemap.md  flake.nix  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  lightweight.md
.github/workflows/: ci.yml  docs.yml
codemaps/: README.md  architecture.md  backend.md  data.md  frontend.md
docs/adr/: 001-data-model.md  002-kicad-integration.md  003-library-structure.md  004-configurable-categories.md  005-tui-state-management.md
scripts/: demo.py  screenshot.py
site/: CNAME  README.md  changelog.md  cli.md  concepts.md  configuration.md  getting-started.md  index.md
site/css/: extra.css
site/overrides/: home.html
site/overrides/partials/: header.html
src/kip/: __init__.py  __main__.py
src/kip/cli/: app.py
src/kist/: __init__.py  __main__.py  errors.py  sexpr.py
src/kist/cli/: app.py
src/kist/core/: __init__.py  categories.py  check.py  config.py  database.py  library.py  naming.py  sync.py
src/kist/kicad/: __init__.py  discovery.py  indexer.py  lib_table.py  mapping.py  render.py  symbols.py  templates.py
tests/: conftest.py  test_sexpr.py
tests/__snapshots__/: test_sexpr.ambr
tests/cli/: test_check.py  test_init.py  test_search.py
tests/core/: test_categories.py  test_check.py  test_config.py  test_database.py  test_library.py  test_naming.py  test_sync.py
tests/kicad/: test_discovery.py  test_indexer.py  test_integration.py  test_lib_table.py  test_mapping.py  test_render.py  test_symbols.py  test_templates.py
tests/models/: test_config.py  test_part.py
tests/providers/: test_digikey.py  test_dispatch.py
tests/tui/: test_add_screen.py  test_app.py  test_category_modal.py  test_check_modal.py  test_detail_modal.py  test_init_screen.py  test_library_search_modal.py  test_part_form.py  test_settings_modal.py  test_themes.py
(+28 files in other folders)
