[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kist"
version = "0.1.0"
description = "Lightweight component library manager for KiCad"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["kicad", "electronics", "components", "parts", "library"]

dependencies = [
    # CLI
    "typer>=0.21.1",
    "rich>=14.3.2",
    # Data & validation
    "pydantic>=2.12.5",
    # HTTP (supplier APIs)
    "httpx>=0.28.1",
    # TUI
    "textual>=7.0.0",
    # Logging
    "structlog>=25.5.0",
    # Config paths
    "platformdirs>=4.5.1",
    # TOML (preserves comments and formatting on round-trip)
    "tomlkit>=0.14.0",
    "pillow>=12.1.1",
    "textual-image>=0.8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "syrupy>=4.8.0",
]

[project.scripts]
kist = "kist.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kist"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Ruff
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/kist/cli/app.py" = ["B008"]  # typer.Option/Argument in defaults

[tool.ruff.lint.isort]
known-first-party = ["kist"]

# ty
[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src/", "tests/"]

# Pytest
[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (skip with '-m \"not slow\"')",
]
